[package]
name = "chrome_decrypt"
version = "0.1.0"
edition = "2021"

[lib]
name = "chrome_decrypt"
crate-type = ["cdylib"]
path = "../src/chrome_decrypt.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
dirs = { version = "6.0.0", default-features = false }
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled", "modern_sqlite"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", default-features = false, features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
] }
